--- a/src/components/menu.css
+++ b/src/components/menu.css
@@ -1,13 +1,13 @@
 .menu,
 .menu * {
     box-sizing: border-box;
-    transition: 0.3s;
+    transition: 0.4s;
 }
 
 .menu {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 0px;
     align-items: center;
     justify-content: center;
     color: white;
@@ -17,33 +17,58 @@
     overflow: hidden;
 
     top: 0;
-    /* left: 15vw; */
     z-index: 5;
-
     width: 100vw;
     height: 0;
     padding: 0;
-    /* transform: translateY(-100vh); */
-
 }
 
 .menu a,
 .menu button {
     color: white;
-    font-size: 20px;
+    font-size: 30px;
     text-decoration: none;
+    cursor: pointer;
+    text-align: center;
 }
 
-.menu button:hover {
-    /* color: rgb(108, 108, 219); */
-    border-bottom: 2px solid rgb(98, 98, 206);
+.menu button:hover,
+.menu a:hover {
+    /* text-decoration: underline; */
+    /* border-left: 5px solid white;
+    border-right: 5px solid white;
+    width: 200px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+
+    border-radius: 20px; */
 }
+
+.menu button {}
 
 .open {
-    /* transform: translateX(0); */
     transform: translateY(0);
     height: 100vh;
-    padding: 20px;
     border-bottom: 1px solid white;
     border-top: 1px solid white;
+}
+
+.book-underline,
+.contact-underline {
+    background-color: white;
+    height: 5px;
+    width: 0;
+    border-radius: 50px;
+}
+
+.book-underline {
+    margin-bottom: 20px;
+}
+
+.menu button:hover+div {
+    width: 150px;
+}
+
+.menu a:hover+div {
+    width: 150px;
 }
